--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
   padding: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start; /* Changed to flex-start to remove top gap */
   height: 100vh;
 }
 
@@ -20,7 +20,7 @@ body {
   min-width: 1000px;
   width: 100%;
   box-sizing: border-box;
-  margin: 0 auto;
+  margin: 1rem auto; /* Added margin for spacing */
   display: flex;
   flex-direction: column;
   align-items: center;
